Fixes #4 Keys overflow

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -68,6 +68,9 @@
     font-family: 'PixelArt';
     outline: none;
     margin-right: 10%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
